# loan-compliance-api

./: .gitignore  .pre-commit-config.yaml  README.md  example_usage.py  generate_all_regulations.py  pyproject.toml  pytest.ini
data/regulations/: README.md
data/regulations/eu/eba/: README.md  gdpr-art-22.txt
data/regulations/uk/fca/: README.md
data/regulations/uk/pra/: README.md
data/regulations/us/: README.md
data/regulations/us/federal/: README.md
src/: scripts.py
src/config/: settings.py
src/regulations/: __init__.py  models.py
src/regulations/parsers/: __init__.py  base.py  factory.py  uk_fca_conc.py  uk_fca_fg21.py
src/regulations/parsers/eu/: __init__.py  eu_eba_gl_2020_06.py
src/regulations/parsers/uk/: uk_fca_conc.py  uk_fca_conc_parser.py  uk_fca_fg21.py
src/regulations/services/: __init__.py  parser_service.py
src/regulations/uk/: uk_fca_conc_parser.py
tests/: __init__.py  conftest.py  test_factory.py  test_integration.py  test_models.py  test_service_layer.py  test_uk_fca_conc_parser.py
tests/regulations/: test_models.py
tests/regulations/parsers/: test_factory.py  test_uk_fca_conc_parser.py  test_uk_fca_fg21_parser.py
tests/regulations/parsers/eu/: __init__.py  test_eu_eba_gl_2020_06_parser.py
tests/regulations/parsers/uk/: test_uk_fca_conc_parser.py
tests/regulations/services/: test_service_layer.py
